# pysta

./: README.md  downloaded_file.txt  downloaded_multiple_pieces.txt  pyproject.toml
document/: 01-Project-Overview.md  02-Upload-vs-Download-Manager.md  03-Why-File-Size-Important.md
node/: download_manager.py  downloader.py  file_manager.py  node_client.py  peer_client.py  upload_manager.py
tests/: mock_peer_server.py  mock_upload_server.py  test_different_devices_download.py  test_download_manager.py  test_downloader.py  test_downloader_with_mock.py  test_file_manager.py  test_tracker_http.py  test_upload_and_download.py  test_upload_manager.py
tests/real_download/: mock_download_client.py  mock_upload_server.py
tracker/: tracker_server.py
